--- a/manifest.json
+++ b/manifest.json
@@ -8,12 +8,12 @@
   "orientation": "portrait",
   "icons": [
     {
-      "src": "1764885908678~2.jpg",
+      "src": "icon.jpg",
       "sizes": "192x192",
       "type": "image/jpeg"
     },
     {
-      "src": "1764885908678~2.jpg",
+      "src": "icon.jpg",
       "sizes": "512x512",
       "type": "image/jpeg"
     }
